--- a/docs/gesture-recognition.ipynb
+++ b/docs/gesture-recognition.ipynb
@@ -1847,9 +1847,9 @@
    "hash": "1919372cf1d3eb14ed4512781231f6c92d1b903e36a54c58c3f91df914a60104"
   },
   "kernelspec": {
-   "display_name": "PyTorch",
+   "display_name": "ai",
    "language": "python",
-   "name": "torch"
+   "name": "ai"
   },
   "language_info": {
    "codemirror_mode": {
