添加手势控制

--- a/test.ipynb
+++ b/test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "506ad3a4",
+   "id": "a935f70b",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eeaaed31",
+   "id": "c874f256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,29 +49,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "52c13ac1",
+   "execution_count": 18,
+   "id": "e1ff44ae",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<mediapipe.python.solutions.hands.Hands at 0x1e329b5c730>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hand_model"
+    "import pyautogui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "40267ee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance = 200\n",
+    "while distance > 0:\n",
+    "    pyautogui.drag(distance, 0, duration=0.5)   # move right\n",
+    "    distance -= 5\n",
+    "    pyautogui.drag(0, distance, duration=0.5)   # move down\n",
+    "    pyautogui.drag(-distance, 0, duration=0.5)  # move left\n",
+    "    distance -= 5\n",
+    "    pyautogui.drag(0, -distance, duration=0.5)  # move up"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4457ca7e",
+   "id": "c0f1a1a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1c7c487",
    "metadata": {},
    "outputs": [],
    "source": []
