new file:   gesture2.py

--- a/docs/gesture-recognition.ipynb
+++ b/docs/gesture-recognition.ipynb
@@ -10,7 +10,10 @@
     "\n",
     "这个笔记本的目的是尝试创建一个可以从图像中识别手势的机器学习模型。为了识别手的姿态，使用 OpenCV 的 OpenPose 模型。这个模型将返回一些在手上预定（predetermined）的点。然后我们可以训练一个模型将这些点分类成一些手势意义。该方法分离了识别手的关注点，并对点进行分类。\n",
     "\n",
-    "![Knipsel.PNG](logo/Knipsel.png)"
+    "![Knipsel.PNG](logo/Knipsel.png)\n",
+    "\n",
+    "\n",
+    "## 载入包"
    ]
   },
   {
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
